compiler/actonc/test/typeerrors/ex13.act
actor main(env):
  a = Act(7)

actor Act(s:int,t:str):
  a = s
  b = t

