compiler/actonc/test/typeerrors/ex13.golden
Building file test/typeerrors/ex13.act
  Compiling ex13.act for development

ERROR: Error when compiling ex13 module: Type error

  |
2 |  a = Act(7)
  |      ^^^^^^
keyword component(s) 't' is not defined in tuple

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

